fix horizontal scroll

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,7 +1,11 @@
 .footer {
-  background: var(--podlozhka, #272E3B);
-  width: 1440px;
+  align-items: center;
+  width: 100%;
   height: 48px;
+  display: flex;
+  padding: 14px 108px;
+  justify-content: space-between;
+  background: var(--podlozhka, #272E3B);
 }
 
 .footer_copyright {
@@ -9,19 +13,13 @@
   font-size: var(--text-medium-font-size, 14px);
   font-weight: var(--text-medium-font-weight, 400);
   line-height: var(--text-medium-line-height, 20px);
-  text-align: left;
   color: var(--vtorostepennyj-tekst, rgba(255, 255, 255, 0.5));
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
 }
 
 .footer_list {
   display: flex;
-  flex-direction: row;
+  justify-content: space-between;
   gap: 32px;
-  align-items: flex-start;
-  justify-content: flex-start;
 }
 
 .list_item {
@@ -31,7 +29,4 @@
   font-size: var(--text-medium-font-size, 14px);
   line-height: var(--text-medium-line-height, 20px);
   font-weight: var(--text-medium-font-weight, 400);
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
 }
