--- a/styles/header.css
+++ b/styles/header.css
@@ -1,20 +1,22 @@
 header {
-    width: 1440px;
-    height: 88px;
+    /* max-width: 1440px; */
+    width: 100%;
+    height: 72px;
+    /* margin: 0 auto; */
     background-color: #20222A;
 }
 
 .header_inner {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    width: 1440px;
+    width: 100%;
     height: 100%;
-    margin-left: 111px;
+    padding: 0 108px;
 }
 
 .header_logo {
   display: flex;
-  margin-right: 140px;
 }
 
 .logo {
@@ -37,6 +39,8 @@ header {
   font-weight: normal;
   font-size: 14px;
   line-height: 1.1;
+  margin-right: auto;
+    margin-left: 140px;
 }
 
 .header_logo,
@@ -49,12 +53,17 @@ header {
 
 .menu_list {
     display: flex;
-    gap: 32px;
-    margin-right: 454px;
-    & a {
-      text-decoration: none;
-      color: #fff;
-    }    
+    gap: 32px;  
+}
+
+.header_left {
+  display: flex;
+  gap: 24px;
+}
+
+.menu_list a {
+    text-decoration: none;
+    color: #fff;
 }
 
 /* ВНИМАНИЕ!!!! ДАЛЕЕ СЕКЦИИ ВАЙБОКОДИНГА!!! */
@@ -160,9 +169,10 @@ header {
   background-color: #f0f0f0;
 }
 
-.header_login {
+.header_btn {
     width: 97px;
     height: 40px;
+    border-radius: 48px;
     background-color: #F4C038;
     color: #20222A;
 }
