--- a/styles/reset.css
+++ b/styles/reset.css
@@ -6,8 +6,19 @@
 }
 
 body {
+    background-image: url('../img/main-bg.png');
+    margin: 0;
+    padding: 0;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     background-color:#272E3B;
-    color: #FFFFFF;    
+    color: #FFFFFF;
+    overflow-x: hidden;
+}
+
+button {
+    cursor: pointer;
 }
 
 ul {
